--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -1,3 +1,12 @@
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+  --btn: #8F9F8A;
+  --bg: #EDE6D8;
+  --hg-color : #C29439;
+  --dark-bg : #2B2B2B;
+}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -10,17 +19,40 @@
     flex-direction: row;
     align-items: center;
     gap: 15px;
+    
+    & h1{
+        font-size: 2.5rem;
+        font-weight: bolder;
+        color: var(--dark-bg);
+    }
 }
 
 .buttons {
     display: flex;
     flex-direction: row;
-    gap: 5px;
+    gap: 10px;
 }
 
-.buttons,button:hover {
+.fullfill {
+    background: var(--btn);
+    color: var(--bg);
+    padding: 1rem;
+    border: none;
+    border-radius: .5rem;
+}
+
+.outline {
+    color: var(--btn);
+    background: transparent;
+    border: 1px solid var(--btn);
+    border-radius: .5rem;
+    padding: 1rem;
+}
+
+
+button:hover {
     cursor: pointer;
-    opacity: 1;
+    opacity: .8;
 }
 
 .nav {
