Added cart to header and cart page with filler data, placeholder images and a little mobile responsiveness in the header.

--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -150,6 +150,9 @@ button:hover {
             "title title"
             "copyright copyright";
     }
+    .buttons, .logo {
+        flex-direction: column;
+    }
 }
 
 .footerTitle {
