--- a/src/app/product-list/product.module.css
+++ b/src/app/product-list/product.module.css
@@ -17,4 +17,93 @@
     border-radius: 0.5rem;
     padding: 1rem;
     text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+.productTitle {
+    font-size: x-large;
+}
+
+.content {
+    margin: 15px;
+}
+
+.productSingle {
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    justify-self: center;
+    padding: 15px;
+}
+
+.cardImage {
+    height: auto;
+}
+
+.productImage {
+    height: auto;
+}
+
+.back {
+    text-decoration: none;
+    padding: 8px;
+    background-color: #C89B6A;
+    color: black;
+    border-radius: 5px;
+    width: fit-content;
+    text-align: center;
+}
+
+.productPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    padding: 15px;
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+
+    .productImage {
+        width: 70%;
+        height: auto;
+    }
+
+    .productSingle {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cardImage {
+        width: 70%;
+        height: auto;
+    }
+}
+
+.productPrice {
+    color: green;
+}
+
+.left {
+    align-items: center;
+    text-align: center;
+}
+
+.right {
+    align-items: center;
+    text-align: center;
+}
+
+html, body{
+  margin: 0;
+  padding: 0;
 }
