--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -8,6 +8,10 @@
   justify-content: space-around;
 }
 
+.error-message {
+  color: rgb(161, 3, 3);
+}
+
 .row {
   display: flex;
   flex-direction: column;
