--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -3,7 +3,12 @@
     flex-direction: column;
     gap: 18px;
     align-items: center;
-    padding: 10px;
+    margin-top: 1rem;
+
+    & h1{
+        margin: 0 auto;
+        text-align: center;
+    }
 }
 
 .field {
@@ -19,4 +24,14 @@
     padding: 8px;
     border-radius: 10px;
     font-size: larger;
+}
+
+.form input{
+    padding: .5rem;
+    border: 1px solid #2B2B2B;
+    border-radius: .5rem;
+}
+
+.errorMessage{
+    color: rgb(128, 0, 0);
 }
