--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -50,6 +50,7 @@
     border-radius: 50px; 
     font-weight: 600;
     font-size: 0.95rem;
+    transition: ease 0.3s;
 }
 
 .outline {
@@ -60,6 +61,7 @@
     padding: 0.7rem 1.5rem;
     font-weight: 600;
     font-size: 0.95rem;
+    transition: ease 0.3s;
 }
 
 .header .fullfill {
