product form styling

--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -284,3 +284,10 @@
     height: 45px;
   }
 }
+
+.form {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
